examples/errors/esin2.c
int main ()
{
	int e1, e2 e3;
	
	e1 = 0;
	
	if (e1 == 0)
		println (e1);
}

